--- a/dash/index.html
+++ b/dash/index.html
@@ -50,7 +50,7 @@
                     <img src="/assets/profile-pic.png" alt="">
                     <div>
                         <p class="ajabeta"></p>
-                        <a href="">See you Profile</a>
+                        <a href="/profile/index.html">See you Profile</a>
                     </div>
                 </div>
                 <hr>
@@ -245,7 +245,7 @@
                     <p>Post Story</p>
                 </div>
                 <div class="story story2">
-                    <img src="/assets/member-1.png">
+                    <img src="/assets/images.jpeg">
                     <p>Post Story</p>
                 </div>
                 <div class="story  story3">
