--- a/profile/index.html
+++ b/profile/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FaceBook</title>
+    <link rel="icon" href="/assets/hLRJ1GG_y0J.ico" type="image">
     <!-- Style CSS -->
     <link rel="stylesheet" href="/dash/style.css">
     <!-- FontAwesome  -->
@@ -37,8 +38,8 @@
                 <img src="../assets/search.png">
                 <input type="text" placeholder="Search">
             </div>
-            <div class="nav-user-icon online" onclick="displayShow()">
-                <img src="../assets/profile-pic.png" alt="">
+            <div class="nav-user-icon online">
+                <img src="../assets/profile-pic.png" alt="" class="yesss">
             </div>
 
         </div>
@@ -470,7 +471,7 @@
 
 
 
-    <script src="/dash/app.js"></script>
+    <script type="module" src="app.js"></script>
 </body>
 
 </html>
