--- a/dash/index.html
+++ b/dash/index.html
@@ -69,7 +69,7 @@
                     <img src="/assets/setting.png" alt="">
                     <div>
 
-                        <a href="">Setting</a>
+                        <a href="../editProfile/editProfile.html">Setting</a>
                     </div>
 
                 </div>
@@ -268,7 +268,7 @@
 
             <div class="write-post-container">
                 <div class="user-profile">
-                    <img src="/assets/profile-pic.png" alt="">
+                    <img src="/assets/profile-pic.png" alt=""   class="pp">
                     <div>
                         <p class="idrbhshow"></p>
                         <small>Public <i class="fa-solid fa-caret-down"></i> </small>
