--- a/profile/index.html
+++ b/profile/index.html
@@ -69,6 +69,7 @@
                     <div>
 
                         <a href="">Setting</a>
+
                     </div>
 
                 </div>
@@ -216,7 +217,8 @@
         <div class="profile-details">
             <div class="pd-left">
                 <div class="pd-row">
-                    <img src="/assets/head-shot-portrait-close-smiling-260nw-1714666150.webp" alt="" class="pd-img img-fluid">
+                    <img src="/assets/head-shot-portrait-close-smiling-260nw-1714666150.webp" alt=""
+                        class="pd-img img-fluid">
                     <div>
                         <h3 class="isside"></h3>
                         <p>1000k Friends - 500 Mutal</p>
@@ -287,7 +289,7 @@
                         <div><img src="/assets/member-7.png" alt=""></div>
                         <div><img src="/assets/member-7.png" alt=""></div>
                         <div><img src="/assets/member-7.png" alt=""></div>
-                       
+
                     </div>
                 </div>
 
