New Function Add

--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
             </div>
             <div class="boX1">
                 <br>
-                <input type="email number" placeholder="Email address or phone number" size="40" id="email" class="loginEmail">
+                <input type="email number" placeholder="Email address or phone number" size="40" id="email"
+                    class="loginEmail">
                 <br>
                 <br>
                 <input type="password" placeholder="Password" size="40" id="password" class="loginPassword">
@@ -33,6 +34,7 @@
                 <a href="#">Forgotten password?</a>
                 <br>
                 <div class="line">
+
                     <hr>
                 </div>
                 <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#exampleModal"
@@ -84,28 +86,26 @@
                                     Date
                                 </button>
                                 <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                                    <li><a class="dropdown-item" href="#" >1</a></li>
-                                    <li><a class="dropdown-item" href="#" >2</a></li>
-                                    <li><a class="dropdown-item" href="#" >3</a></li>
-                                    <li><a class="dropdown-item" href="#" >4</a></li>
-                                    <li><a class="dropdown-item" href="#" >5</a></li>
-                                    <li><a class="dropdown-item" href="#" >6</a></li>
+                                    <li><a class="dropdown-item" href="#">1</a></li>
+                                    <li><a class="dropdown-item" href="#">2</a></li>
+                                    <li><a class="dropdown-item" href="#">3</a></li>
+                                    <li><a class="dropdown-item" href="#">4</a></li>
+                                    <li><a class="dropdown-item" href="#">5</a></li>
+                                    <li><a class="dropdown-item" href="#">6</a></li>
                                 </ul>
                                 <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1"
                                     data-bs-toggle="dropdown" aria-expanded="false">
                                     Month
                                 </button>
                                 <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                                    <li><a class="dropdown-item" href="#"
-                                            >January</a></li>
-                                    <li><a class="dropdown-item" href="#"
-                                            >February</a></li>
-                                    <li><a class="dropdown-item" href="#" >March</a>
+                                    <li><a class="dropdown-item" href="#">January</a></li>
+                                    <li><a class="dropdown-item" href="#">February</a></li>
+                                    <li><a class="dropdown-item" href="#">March</a>
                                     </li>
-                                    <li><a class="dropdown-item" href="#" >April</a>
+                                    <li><a class="dropdown-item" href="#">April</a>
                                     </li>
-                                    <li><a class="dropdown-item" href="#" >May</a></li>
-                                    <li><a class="dropdown-item" href="#" >June</a>
+                                    <li><a class="dropdown-item" href="#">May</a></li>
+                                    <li><a class="dropdown-item" href="#">June</a>
                                     </li>
                                 </ul>
                                 <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1"
@@ -113,23 +113,21 @@
                                     Year
                                 </button>
                                 <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                                    <li><a class="dropdown-item" href="#" >2000</a></li>
-                                    <li><a class="dropdown-item" href="#" >2001</a></li>
-                                    <li><a class="dropdown-item" href="#" >2002</a></li>
-                                    <li><a class="dropdown-item" href="#" >2003</a></li>
-                                    <li><a class="dropdown-item" href="#" >2004</a></li>
-                                    <li><a class="dropdown-item" href="#" >2005</a></li>
+                                    <li><a class="dropdown-item" href="#">2000</a></li>
+                                    <li><a class="dropdown-item" href="#">2001</a></li>
+                                    <li><a class="dropdown-item" href="#">2002</a></li>
+                                    <li><a class="dropdown-item" href="#">2003</a></li>
+                                    <li><a class="dropdown-item" href="#">2004</a></li>
+                                    <li><a class="dropdown-item" href="#">2005</a></li>
                                 </ul>
                             </div>
                             <input type="radio" class="btn-check" name="options-outlined" id="success-outlined"
                                 autocomplete="off" checked>
-                            <label class="btn btn-outline-success" for="success-outlined"
-                                >Male</label>
+                            <label class="btn btn-outline-success" for="success-outlined">Male</label>
 
                             <input type="radio" class="btn-check" name="options-outlined" id="danger-outlined"
                                 autocomplete="off">
-                            <label class="btn btn-outline-danger" for="danger-outlined"
-                                >Female</label>
+                            <label class="btn btn-outline-danger" for="danger-outlined">Female</label>
                         </form>
                     </div>
                     <div class="modal-footer">
