--- a/dash/index.html
+++ b/dash/index.html
@@ -16,6 +16,8 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+
+    <!-- <script src="https://kit.fontawesome.com/86637637cc.js" crossorigin="anonymous"></script> -->
 </head>
 
 <body>
@@ -42,7 +44,7 @@
             </div>
 
         </div>
-        
+
 
 
         <div class="setting-menu">
@@ -79,7 +81,7 @@
                     <div>
 
                         <!-- <a href="" onclick=" logoutHandler()">Log Out</a> -->
-                        <a href=""  id="logOut">Log Out</a>
+                        <a href="" id="logOut">Log Out</a>
                     </div>
                 </div>
             </div>
@@ -268,10 +270,11 @@
 
             <div class="write-post-container">
                 <div class="user-profile">
-                    <img src="/assets/profile-pic.png" alt=""   class="pp">
+                    <img src="/assets/profile-pic.png" alt="" class="pp">
                     <div>
                         <p class="idrbhshow"></p>
-                        <small>Public <i class="fa-solid fa-caret-down"></i> </small>
+                        <small>Public <br>
+                            <span class="curentUser"></span><i class="fas fa-caret-down"></i></small>
                     </div>
                 </div>
 
@@ -297,12 +300,14 @@
                                 <div class="modal-body">
                                     <form>
                                         <div class="mb-3">
-                                            <label for="recipient-name" class="col-form-label">Post</label>
+                                            <label for="recipient-name" class="col-form-label">Description</label>
                                             <input type="text" class="form-control postInput" id="recipient-name">
                                         </div>
                                         <div class="mb-3">
-                                            <label for="message-text" class="col-form-label">Description</label>
-                                            <textarea class="form-control" id="message-text"></textarea>
+                                            <label for="message-text" class="col-form-label">Image Upload</label>
+                                            <!-- <textarea class="form-control" id="message-text"></textarea> -->
+                                            <input type="file" id="uploadImage">
+
                                         </div>
                                     </form>
                                 </div>
