--- a/user/user.html
+++ b/user/user.html
@@ -12,7 +12,8 @@
 
 </head>
 
-<body style="overflow: hidden;">
+<body>
+    <div class="container">
     <div class="row myUsersArea">
         <!-- <div class="col">
             <div class="card" style="width: 18rem;">
@@ -27,6 +28,8 @@
             </div>
         </div> -->
     </div>
+
+</div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
         crossorigin="anonymous"></script>
